PYI-779 update shareattributes in the new format